--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-
-
-    <script src="app.js"></script>
+     <nav>
+        <ul>
+            <li class="brand"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Spotify_App_Logo.svg/2048px-Spotify_App_Logo.svg.png" alt="spotify" height="50px" width="100px">Spotify</li>
+            <li>Home</li>
+            <li>About</li>
+        </ul>
+     </nav>
+<script src="app.js"></script>
 </body>
 </html>
