--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             <li>About</li>
         </ul>
      </nav>
+     <div class="container">
+        <h1>Best of NCS - No Copyright Sounds</h1>
+        <div class="songList"></div>
+        <div class="songBanner"></div>
+     </div>
+
+     
 <script src="app.js"></script>
 </body>
 </html>
