added audio progress bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         <div class="songBanner"></div>
      </div>
 
-     
+<div class="bottom">
+    <input type="range" name="range" id="myprogressbar" min="0" max="100">
+    <div class="icons">
+        <i class="fa-solid fa-3x fa-backward-step"></i>&nbsp;&nbsp;
+        <i class="fa-regular fa-3x fa-circle-play"></i>&nbsp;&nbsp;
+        <i class="fa-solid fa-3x fa-forward-step"></i>
+    </div>
+</div>
+
+
 <script src="app.js"></script>
+<script src="https://kit.fontawesome.com/390ae018c4.js" crossorigin="anonymous"></script>
 </body>
 </html>
